@@ -100,7 +100,9 @@ application {
         '--add-opens=javafx.controls/com.sun.javafx.scene.control=org.jabref',
 
         '--add-opens=javafx.base/javafx.collections=org.jabref',
-        '--add-opens=javafx.base/javafx.collections.transformation=org.jabref'
+        '--add-opens=javafx.base/javafx.collections.transformation=org.jabref',
+
+        '--enable-native-access=javafx.graphics,javafx.media,javafx.web,org.apache.lucene.core'
     ]
 }
 
@@ -148,12 +150,12 @@ dependencyLocking {
 }
 
 javafx {
-    version = "23.0.2"
+    version = "24"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing' ]
 }
 
 jacoco {
-    toolVersion = "0.8.13-SNAPSHOT"
+    toolVersion = "0.8.13"
 }
 
 dependencies {
@@ -179,7 +181,7 @@ dependencies {
     implementation "org.apache.lucene:lucene-analysis-common:$luceneVersion"
     implementation "org.apache.lucene:lucene-highlighter:$luceneVersion"
 
-    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.13.0'
+    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.14.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.13.0'
     implementation 'commons-logging:commons-logging:1.3.5'
@@ -204,7 +206,7 @@ dependencies {
     antlr4 'org.antlr:antlr4:4.13.2'
     implementation 'org.antlr:antlr4-runtime:4.13.2'
 
-    implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '7.1.0.202411261347-r'
+    implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '7.2.0.202503040940-r'
 
     implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.18.3'
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.18.2'
@@ -244,7 +246,7 @@ dependencies {
     }
     implementation 'org.fxmisc.flowless:flowless:0.7.3'
     implementation 'org.fxmisc.richtext:richtextfx:0.11.4'
-    implementation (group: 'com.dlsc.gemsfx', name: 'gemsfx', version: '2.95.0') {
+    implementation (group: 'com.dlsc.gemsfx', name: 'gemsfx', version: '2.96.0') {
         exclude module: 'javax.inject' // Split package, use only jakarta.inject
         exclude module: 'commons-lang3'
         exclude group: 'org.apache.commons.validator'
@@ -262,7 +264,7 @@ dependencies {
         exclude group: 'com.squareup.okhttp3'
     }
 
-    implementation 'org.controlsfx:controlsfx:11.2.1'
+    implementation 'org.controlsfx:controlsfx:11.2.2'
 
     // region HTTP clients
     implementation 'org.jsoup:jsoup:1.19.1'
@@ -398,12 +400,12 @@ dependencies {
     // recommended by https://github.com/wiremock/wiremock/issues/2149#issuecomment-1835775954
     testImplementation 'org.wiremock:wiremock-standalone:3.12.1'
 
-    checkstyle 'com.puppycrawl.tools:checkstyle:10.21.3'
+    checkstyle 'com.puppycrawl.tools:checkstyle:10.21.4'
     // xjc needs the runtime as well for the ant task, otherwise it fails
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-xjc', version: '3.0.2'
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.2'
 
-    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:3.2.0"))
+    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:3.5.0"))
     rewrite("org.openrewrite.recipe:rewrite-static-analysis")
     rewrite("org.openrewrite.recipe:rewrite-logging-frameworks")
     rewrite("org.openrewrite.recipe:rewrite-testing-frameworks")
@@ -753,7 +755,8 @@ jlink {
     // https://github.com/beryx/badass-jlink-plugin/issues/61#issuecomment-504640018
     addExtraDependencies("javafx")
 
-    addOptions('--strip-debug', '--compress', 'zip-6', '--no-header-files', '--no-man-pages')
+    // We keep debug statements - otherwise '--strip-debug' would be included
+    addOptions('--compress', 'zip-6', '--no-header-files', '--no-man-pages')
     launcher {
         name = 'JabRef'
     }
